[package]
name = "pick-eat"
version = "0.1.0"
authors = ["Valentin.Roussel <valentin.rssl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0"
actix-web = "3"
actix-rt = "1"
bb8 = "0.4"
bb8-postgres = "0.4"
chrono = { version = "0.4", features = ["serde"] }
config = { version = "0.10" }
log = "0.4"
serde = "1.0"
serde_json = "1.0"
simplelog = "0.8"
time = { version = "0.2", features = ["serde"] }
tokio-postgres = { version = "0.5", features = ["with-time-0_2"] }
tokio = { version = "0.2" }
