[package]
name = "pick-eat"
version = "0.1.0"
authors = ["Valentin.Roussel <valentin.rssl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.1"
actix-web = "4.0.1"
actix-rt = "2.7.0"
bb8 = "0.8.0"
bb8-postgres = "0.8.0"
chrono = { version = "0.4.19", features = ["serde"] }
config = "0.12.0"
log = "0.4.16"
serde = "1.0.136"
serde_json = "1.0.79"
simplelog = "0.11.2"
time = { version = "0.3.9", features = ["serde"] }
tokio-postgres = { version = "0.7.5", features = ["with-time-0_3", "with-serde_json-1"] }
tokio = "1.17.0"
