[package]
name = "pickeat"
version = "0.1.0"
authors = ["Valentin.Roussel <valentin.rssl@gmail.com>"]
edition = "2018"
#todo try 2021

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-session = { version = "0.7.2", features = ["redis-rs-session"] }
actix-identity = { version = "0.5.2" }
argon2 = "0.5"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock", "std"] }
clap = { version = "4.3.11", features = ["derive"] }
config = "0.13.3"
log = "0.4.19"
serde = "1.0.171"
serde_json = "1.0.102"
simplelog = "0.12.1"
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "time", "chrono" ] }
reqwest = { version = "0.11", features = ["json"] }
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
lto = "thin"

[profile.dev.package.sqlx-macros]
opt-level = 3
