[package]
name = "pickeat"
version = "0.1.0"
authors = ["Valentin.Roussel <valentin.rssl@gmail.com>"]
edition = "2018"
#todo try 2021

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-session = { version = "0.8.0", features = ["redis-rs-session"] }
actix-identity = { version = "0.6.0" }
argon2 = { version = "0.5", features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock", "std"] }
clap = { version = "4.4.5", features = ["derive"] }
config = "0.13.3"
log = "0.4.20"
serde = "1.0.188"
serde_json = "1.0.107"
simplelog = "0.12.1"
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "time", "chrono", "bigdecimal" ] }
reqwest = { version = "0.11", features = ["json"] }
openssl = { version = "0.10", features = ["vendored"] }
thiserror = "1.0.48"
email_address = "0.2.4"
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
sqlx-conditional-queries = { version = "0.1.3", features = ["postgres"] }

[profile.release]
lto = "thin"

[profile.dev.package.sqlx-macros]
opt-level = 3
