[package]
name = "pickeat"
version = "0.1.0"
authors = ["Valentin.Roussel <valentin.rssl@gmail.com>"]
edition = "2018"
#todo try 2021

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix-session = { version = "0.9.0", features = ["redis-rs-session"] }
actix-identity = { version = "0.7.0" }
argon2 = { version = "0.5", features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock", "std"] }
clap = { version = "4.5.0", features = ["derive"] }
config = "0.14.0"
log = "0.4.20"
serde = "1.0.196"
serde_json = "1.0.113"
simplelog = "0.12.1"
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "time", "chrono", "bigdecimal" ] }
reqwest = { version = "0.11", features = ["json"] }
openssl = { version = "0.10", features = ["vendored"] }
thiserror = "1.0.57"
email_address = "0.2.4"
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }

[profile.release]
lto = "thin"

[profile.dev.package.sqlx-macros]
opt-level = 3
